# sensor-clustering-microservices

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/actions/aks-kubelogin/: action.yml
.github/workflows/: ci.yml  producer-deploy.yml
airflow/: Dockerfile  README.md
consumer/: Dockerfile  README.md  __init__.py  app.py  config.py  pyproject.toml
consumer/services/: __init__.py  consumer.py  database.py
consumer/utils/: __init__.py  shutdown.py
dags/: README.md  __init__.py  train.py
dags/utils/: __init__.py  healthcheck.py  status.py
domain/: README.md  __init__.py  pyproject.toml
domain/models/: __init__.py  cluster.py  drift.py  failure.py  machine.py  prediction.py  reading.py  version.py
grafana/: README.md
grafana/provisioning/dashboards/: dashboard.yml  monitoring.json
grafana/provisioning/datasources/: datasource.yml
k8s/: producer-deployment.yaml  producer-serivce-account.yaml
mlflow/: Dockerfile  README.md
predictor/: .dockerignore  Dockerfile  README.md  __init__.py  app.py  config.py  pyproject.toml
predictor/services/: __init__.py  drift.py  predictor.py
producer/: Dockerfile  README.md  __init__.py  app.py  config.py  producer.py  pyproject.toml  utils.py
producer/models/: __init__.py  failure.py  message.py  reading.py
producer/services/: __init__.py  health.py  producer.py  server.py  storage.py
producer/utils/: __init__.py  analysis.py  metrics.py  server.py
prometheus/: README.md  prometheus.yml
trainer/: .dockerignore  Dockerfile  README.md  __init__.py  app.py  celery.py  config.py  pyproject.toml
trainer/api/: __init__.py
trainer/api/models/: __init__.py  health.py  status.py  train.py
trainer/api/routes/: __init__.py  health.py  train.py
trainer/scripts/: entrypoint.sh
trainer/services/: __init__.py  trainer.py
trainer/tasks/: __init__.py  train.py
