[project]
name = "ml6-sensor-clustering"
version = "0.1.0"
description = "Sensor failure clustering system"
requires-python = ">=3.10"
dependencies = [
    "aiokafka>=0.12.0",
    "celery>=5.5.1",
    "fastapi>=0.115.12",
    "kafka-python>=2.1.5",
    "loguru>=0.7.3",
    "mlflow>=2.22.0",
    "mypy>=1.15.0",
    "numpy>=2.2.5",
    "polars>=1.27.1",
    "prometheus-client>=0.21.1",
    "pydantic>=2.11.3",
    "ruff>=0.11.7",
    "scikit-learn>=1.6.1",
    "tortoise-orm>=0.25.0",
    "types-requests>=2.32.0.20250328",
    "uvicorn>=0.34.2",
]
